--- a/resources/css/responsiveness.css
+++ b/resources/css/responsiveness.css
@@ -15,13 +15,36 @@
         font-size: 12px;
     }
 
-    h1 { font-size: 1.75rem; }
-  h2 { font-size: 1.5rem; }
-  h3 { font-size: 1.35rem; }
-  h4 { font-size: 1.2rem; }
-  h5 { font-size: 1.1rem; }
-  h6 { font-size: 1rem; }
-  p  { font-size: 0.9rem; line-height: 1.6; }
+    h1 {
+        font-size: 1.75rem;
+    }
+
+    h2 {
+        font-size: 1.5rem;
+    }
+
+    h3 {
+        font-size: 1.35rem;
+        font-weight: bold;
+    }
+
+    h4 {
+        font-size: 1.2rem;
+        font-weight: bold;
+    }
+
+    h5 {
+        font-size: 1.1rem;
+    }
+
+    h6 {
+        font-size: 1rem;
+    }
+
+    p {
+        font-size: 0.9rem;
+        line-height: 1.6;
+    }
 }
 
 /* Small Devices (max-width: 320px) */
@@ -80,8 +103,8 @@
         width: 50%;
     } */
 
-    .row.g-1 > div:nth-child(1),
-    .row.g-1 > div:nth-child(2) {
+    .row.g-1>div:nth-child(1),
+    .row.g-1>div:nth-child(2) {
         margin-bottom: 1px;
     }
 
@@ -109,6 +132,7 @@
     .custom-width {
         width: 45%;
     }
+
     .product-button {
         width: 70%;
     }
@@ -120,6 +144,14 @@
     .ourproduct2 {
         border-radius: 30px;
         padding: 1.5rem;
+    }
+
+    h3 {
+        font-weight: bold;
+    }
+
+    h4 {
+        font-weight: bold;
     }
 }
 
@@ -196,23 +228,65 @@
 }
 
 @media (min-width: 401px) and (max-width: 1200px) {
-  h1 { font-size: 2rem; }
-  h2 { font-size: 1.75rem; }
-  h3 { font-size: 1.55rem; }
-  h4 { font-size: 1.35rem; }
-  h5 { font-size: 1.25rem; }
-  h6 { font-size: 1.1rem; }
-  p  { font-size: 1rem; line-height: 1.7; }
+    h1 {
+        font-size: 2rem;
+    }
+
+    h2 {
+        font-size: 1.75rem;
+    }
+
+    h3 {
+        font-size: 1.55rem;
+    }
+
+    h4 {
+        font-size: 1.35rem;
+    }
+
+    h5 {
+        font-size: 1.25rem;
+    }
+
+    h6 {
+        font-size: 1.1rem;
+    }
+
+    p {
+        font-size: 1rem;
+        line-height: 1.7;
+    }
 }
 
 @media (min-width: 1201px) {
-  h1 { font-size: 3.5rem; }
-  h2 { font-size: 2rem; }
-  h3 { font-size: 1.75rem; }
-  h4 { font-size: 1.5rem; }
-  h5 { font-size: 1.35rem; }
-  h6 { font-size: 1.2rem; }
-  p  { font-size: 1.1rem; line-height: 1.8; }
+    h1 {
+        font-size: 3.5rem;
+    }
+
+    h2 {
+        font-size: 2rem;
+    }
+
+    h3 {
+        font-size: 1.75rem;
+    }
+
+    h4 {
+        font-size: 1.5rem;
+    }
+
+    h5 {
+        font-size: 1.35rem;
+    }
+
+    h6 {
+        font-size: 1.2rem;
+    }
+
+    p {
+        font-size: 1.1rem;
+        line-height: 1.8;
+    }
 }
 
 
