--- a/resources/css/responsiveness.css
+++ b/resources/css/responsiveness.css
@@ -70,10 +70,9 @@
         font-size: 14px;
     }
 
-    .btn-primary-action {
+    /* .btn-primary-action {
         font-size: 10px;
-        width: 50%;
-    }
+    } */
 
     /* .btn-secondary-action {
         font-size: 10px;
@@ -285,7 +284,7 @@
 
     .btn-nav-primary,
     .btn-nav-secondary {
-        padding: 14px 26px;
+        padding: 14px 30px;
     }
 
     .product-button {
@@ -306,8 +305,12 @@
 
     .btn-primary-action {
         font-size: 1rem;
-        width: 40%;
-        padding: 1rem;
+        padding: 0.8rem;
+    }
+
+    .btn-secondary-action {
+        font-size: 1rem;
+        padding: 0.8rem 1.5rem;
     }
 
     /* .btn-secondary-action {
