update from using vite

--- a/public/css/access.css
+++ b/public/css/access.css
@@ -18,6 +18,7 @@
 .custom-form-group {
   position: relative;
   margin-bottom: 40px;
+
 }
 
 
@@ -40,7 +41,7 @@
 
 .form-control-custom {
   /* Inherit basic form control look but override for the design */
-  display: block;
+  display: block; /* changed from block to inline */
   width: 100%;
   padding: 1rem 1.25rem;
   /* Increased padding for the height shown */
@@ -283,6 +284,7 @@ a {
   overflow: hidden;
 }
 
+
 .right-col::before {
   content: "";
   position: absolute;
@@ -291,9 +293,8 @@ a {
   right: 0;
   bottom: 0;
   background-image: url('../images/signup-bg.png');
-  background-repeat: no-repeat;
-  background-size: cover;
-  /* animation: waveAnimation 20s linear infinite; */
+  background-repeat: repeat;
+  animation: waveAnimation 20s linear infinite;
 }
 
 @keyframes gradientShift {
@@ -409,50 +410,53 @@ a {
 
 /* Success Alert */
 .alert-success {
-  background-color: #d4edda ;
-  border-color: #28a745 ;
-  color: #155724 ;
+  background-color: #d4edda !important;
+  border-color: #28a745 !important;
+  color: #155724 !important;
   text-align: center;
 }
 
 .alert-success .btn-close {
-  color: #155724 ;
-  font-size: 1rem;
+  color: #155724 !important;
+  font-size: 0.9rem;
 }
 
 /* Danger Alert */
 .alert-danger {
   text-align: center;
-  background-color: #f8d7da ;
-  border-color: #f5c6cb ;
-  color: #721c24 ;
+  background-color: #f8d7da !important;
+  border-color: #f5c6cb !important;
+  color: #721c24 !important;
 }
 
 .alert-danger .btn-close {
-  color: #721c24 ;
-  font-size: 1rem;
+  color: #721c24 !important;
+  /* border-radius: 50%; */
+  height: 0.75rem;
+  width: 0.75rem;
+  /* border: solid 1px #721c24; */
 }
 
 /* Warning Alert */
 .alert-warning {
-  background-color: #fff3cd ;
-  border-color: #ffeaa7 ;
-  color: #856404 ;
+  background-color: #fff3cd !important;
+  border-color: #ffeaa7 !important;
+  color: #856404 !important;
 }
 
 .alert-warning .btn-close {
-  color: #856404 ;
+  color: #856404 !important;
 }
 
 /* Info Alert */
 .alert-info {
-  background-color: #d1ecf1 ;
-  border-color: #bee5eb ;
-  color: #0c5460 ;
+  background-color: #d1ecf1 !important;
+  border-color: #bee5eb !important;
+  color: #0c5460 !important;
 }
 
 .alert-info .btn-close {
-  color: #0c5460 ;
+  color: #0c5460 !important;
 }
 
 @keyframes slideIn {
@@ -480,4 +484,11 @@ a {
   to {
     opacity: 1;
   }
+}
+
+.nav-link
+{
+    color: #2B6870;
+    font-size:20px;
+    font-weight:700;
 }
