--- a/public/css/style.css
+++ b/public/css/style.css
@@ -327,7 +327,9 @@ a.nav-link.active {
 }
 
 .founder-video {
-    width: 800px;
+    max-width: 800px;
+    width: 100%;
+    height: 300px;
 }
 
 /* ===== DASHBOARD LOGO ===== */
@@ -411,7 +413,7 @@ p {
     font-weight: bolder;
     /* font-size: 43px; */
     line-height: 120%;
-    min-height: 110px;
+    min-height: 100px;
     vertical-align: middle;
     letter-spacing: 1%;
     color: #004a53;
@@ -999,7 +1001,7 @@ footer p {
 }
 
 .navbar-brand img {
-    width: 100%;
+    width: 80%;
     height: 50px;
 }
 
@@ -1010,6 +1012,8 @@ footer p {
 }
 
 .navbar-toggler-icon {
+    width: 1.2rem;
+    height: 1.2rem;
     background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 30 30%22%3E%3Cpath stroke=%22%23004A53%22 stroke-linecap=%22round%22 stroke-miterlimit=%2210%22 stroke-width=%222%22 d=%22M4 7h22M4 15h22M4 23h22%22/%3E%3C/svg%3E");
 }
 
@@ -1972,4 +1976,3 @@ div.contact-container a {
     color: #ffffffcc;
     border: none;
 }
-
