--- a/public/css/style.css
+++ b/public/css/style.css
@@ -329,7 +329,7 @@ a.nav-link.active {
 .founder-video {
     max-width: 800px;
     width: 100%;
-    height: 300px;
+    height: auto;
 }
 
 /* ===== DASHBOARD LOGO ===== */
