--- a/public/css/responsiveness.css
+++ b/public/css/responsiveness.css
@@ -17,6 +17,7 @@
 
     .btn-primary-action {
         width: 70%;
+        padding-inline: 5px;
     }
     .btn-secondary-action {
         width: 70%;
