--- a/public/css/responsiveness.css
+++ b/public/css/responsiveness.css
@@ -51,6 +51,10 @@
     .newsletter-button{
         padding: 10px 6px;
     }
+    .achievement-card{
+        padding: 24px 16px;
+    }
+
     h1 {
         font-size: 1.75rem;
     }
